k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-editor
  labels:
    name: image-editor
